# opendaw

./: .antigravityignore  .gitignore  ARCHITECTURE.md  COMMUNITY_INPUT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  README.md  ROADMAP.md  WARDEN_REPORT.md  architect.md  commit_message.txt  create_synth_update.py  create_track_update.py  m.txt  nova.md  package-lock.json  patch.diff  patch_tracks.diff  plan.md  pr_desc.txt  pr_description.md  screenshot.sh  submit.sh  tailwind.config.js  test_app.svelte  test_script.sh  vite.config.js
.github/: labeler.yml
opendaw-wasm/: Cargo.toml
opendaw-wasm/benches/: math_benches.rs
opendaw-wasm/src/: app.rs  lib.rs
opendaw-wasm/src/core/: automation.rs  groove.rs  history.rs  math.rs  mod.rs  modulation.rs  routing.rs  session.rs  tempo_map.rs
opendaw-wasm/src/engine/: bus.rs  channel.rs  export.rs  metronome.rs  mixer.rs  mod.rs  oscillator.rs  pdc.rs  recording.rs  routing.rs  stream.rs  synth.rs  voice.rs  warp.rs
opendaw-wasm/src/engine/effects/: gain.rs
opendaw-wasm/src/mcp/: channel.rs  handler.rs  mod.rs  transport.rs
opendaw-wasm/src/midi/: device.rs  import.rs  mapping.rs  mpe.rs
opendaw-wasm/src/plugin/: ara.rs  host.rs
opendaw-wasm/src/state/: clip.rs  daw.rs  freeze.rs  mod.rs  project.rs  sync.rs  track.rs  track_clip.rs  track_plugin.rs
opendaw-wasm/src/ui/: arranger.rs  browser.rs  effects.rs  import.rs  main_layout.rs  mixer.rs  mod.rs  piano_roll.rs  project.rs  session_view.rs  theme.rs  timeline.rs  title_bar.rs  tracks.rs  transport.rs
opendaw-wasm/src/util/: media_index.rs  mod.rs
(+232 files in other folders)
