[package]
name = "opendaw"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bincode = "1.3.3"
cpal = { version = "0.17.3", features = ["wasm-bindgen"] }
crossbeam-channel = "0.5.15"
eframe = { version = "0.34.2", features = ["glow", "persistence"] }
egui = "0.34.2"
hound = "3.5.1"
log = "0.4.29"
midir = "0.11.0"
midly = "0.5.3"
rfd = "0.17.2"
ringbuf = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
web-sys = { version = "0.3.99", features = ["HtmlCanvasElement", "Window", "Document", "Element"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.52.3", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
